# opencv_uhu

./: CMakeLists.txt  LICENSE  p0_mat.cpp  p1_collage.cpp  p1_videoread.cpp  p1_videowrite.cpp  p2_blurring.cpp  p2_canny.cpp  p2_thresh.cpp  p3_chroma.cpp  p3_hsv.cpp  p4_ball.cpp  p4_contours.cpp  p4_conveyor.cpp  p5_face.cpp  p5_faceblur.cpp  p6_aruco.cpp  p7_qr.cpp
.devcontainer/: Dockerfile  devcontainer.json
data/: readme.md
data/videos/: osaka1.webm  osaka2.webm
